Version [next]

[Feature] On Windows, Ghostscript replaced pdfroff.
[Bugfix] The groff detection logic was not as logical as it should have been.

-------------------------------

Version 0.13.2
2024-04-30

[Improved] Multi-threading is more standards-compliant now (thanks @Th69).

-------------------------------

Version 0.13.1
2024-01-29

[Improved] Finding groff happens in a thread now. No more blocking on startup.
[Removed] So we got rid of the loading window again.

-------------------------------

Version 0.13.0
2024-01-11

[Feature] Support for hdtbl.
[Changed] Build extras and build preprocessors are now listed in a multi-select box.
[Improved] If no error has occurred, the log file will contain a success message.
[Improved] The default font looked gross on macOS. This should be better now.
[Bugfix] Calling troff over the system default shell now, potentially finding more paths.
[Improved] BuildDocument uses a simpler execution approach now.
[Feature] macOS Cmd+X/C/V are supported now.
[Feature] Added a loading window so you won't think groffstudio would procrastinate.

-------------------------------

Version 0.12.0
2022-03-14

[Feature] If the installed version of troff is not detected as groff, a warning is displayed.
[Changed] On platforms which probably use a package manager (currently, Linux and BSDs), the "update check" checkbox is disabled and the related libraries are not referenced.
[Improved] When exiting groffstudio, the Save function from the "save" button is reused.
[Changed] Less capital letters.
[Improved] groffstudio opens on the primary screen now.

-------------------------------

Version 0.11.0
2022-03-12

[Feature] The update check was made optional (default: false).
[Changed] Rearranged the build options panel so it won't look as misaligned as it actually was.
[Changed] The required SSL libraries are shipped with the Windows package now.

-------------------------------

Version 0.10.1
2022-03-10
